Fix hero on smaller screens

--- a/src/components/Hero/_hero.scss
+++ b/src/components/Hero/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url(../images/hero.jpg);
     background-size: cover;
     background-position: center;
@@ -20,11 +20,9 @@
 
 .hero__content {
     position: relative;
-    top: 213px;
-    padding: 0 $margin-mobile;
+    padding: 213px $margin-mobile 0;
     @media (min-width: $bp-main) {
-        padding: 0 $margin-desktop;
-        top: 220px;
+        padding: 220px $margin-desktop 0;
     }
 }
 
